# hierbem

./: .clang-format  .cmake-format.py  .cproject  .gitattributes  .gitignore  .project  AUTHORS  BUILD.md  CMakeLists.txt  README-zh.md  README.md  UnitTests.txt  dof_numbering.gpl  vcpkg-configuration.json  vcpkg.json
doc/: Doxyfile  (+6 more)
src/: CMakeLists.txt  aca_plus.cc  aca_plus.cu  debug_tools.cc  debug_tools.cu  dof_tools_ext.cc  generate_block_cluster_tree.cc  generic_functors.cc  gmsh_manipulation.cc  hmatrix_support.cc  laplace-bem  laplace_bem.cu  regex_tools.cc  sauter_quadrature.cc  sauter_quadrature.cu
src/dofs/: dof_tools_ext.cc
src/electric_field/: ddm_efield.cc  gmsh_manipulation.cc
src/hbem_laplace/: CMakeLists.txt  config.default.toml  cu_related.cu  cu_related.h  hbem_laplace.cc  hierbem_laplace.cc
src/hierbem/: CMakeLists.txt  hierbem.cc
src/hmatrix/: hmatrix_support.cc
src/laplace/: laplace_bem.cu
src/quadrature/: sauter_quadrature.cu
src/utilities/: debug_tools.cc  generic_functors.cc  regex_tools.cc
tests/: CMakeLists.txt  TestCases.cmake
tests/aca-full-matrix-approximation/: CMakeLists.txt  aca-full-matrix-approximation.cc  batch.sh  gen_dlp_full_matrix.m  process.m
tests/aca-random-select-ref-row/: CMakeLists.txt  aca-random-select-ref-row.cc
tests/binary-tree/: binary-tree.cc  binary-tree.output
tests/binary-tree-copy/: binary-tree-copy.cc
tests/block-cluster-tree/: block-cluster-tree.cc
tests/block-cluster-tree-hp/: CMakeLists.txt  process.m
tests/block-cluster-tree-hp-coarse-non-tensor-product/: bct-hp-coarse-ntp.cc
tests/block-cluster-tree-overloaded-assignment/: bct-overloaded-assignment.cc
tests/block-cluster-tree-visualize-with-rank/: bct-visualize-with-rank.output
tests/cell-distance/: cell-distance.cc  cell-distance.output
tests/cell-neighboring-type/: cell-neighboring-type.cc
tests/cell-neighboring-type-for-surface-mesh/: CMakeLists.txt  cell-neighboring-type-for-surface-mesh.cc
tests/cluster-diameter/: cluster-diameter.output
tests/cluster-set-inclusion/: cluster-set-inclusion.cc
tests/cluster-tree/: cluster-tree.cc  cluster-tree.output
tests/cluster-tree-copy-constructor/: cluster-tree-copy-constructor.cc
tests/cluster-tree-hp/: CMakeLists.txt
tests/cu-bem-values/: cu-bem-values.cu  cu-bem-values.output
tests/cu-qgauss-copy-from-host/: cu-qgauss-copy-from-host.cu  cu-qgauss-copy-from-host.output
tests/cu-scratch-data/: cu-scratch-data.cu
tests/cudafullmatrix-Tmmult/: cudafullmatrix-Tmmult.cu  process.m
tests/cudafullmatrix-Tvmult/: CMakeLists.txt  cudafullmatrix-Tvmult.cu  process.m
tests/cudafullmatrix-det2x2/: CMakeLists.txt  cudafullmatrix-det2x2.cu  cudafullmatrix-det2x2.output
tests/cudafullmatrix-det3x3/: cudafullmatrix-det3x3.cu  cudafullmatrix-det3x3.output
tests/cudafullmatrix-invert-by-gauss-elim/: cudafullmatrix-invert-by-gauss-elim.cu
tests/cudafullmatrix-invert2x2/: cudafullmatrix-invert2x2.cu  cudafullmatrix-invert2x2.output
tests/cudafullmatrix-mTmult/: cudafullmatrix-mTmult.cu  cudafullmatrix-mTmult.output
tests/cudafullmatrix-mmult/: CMakeLists.txt  cudafullmatrix-mmult.cu
tests/cudafullmatrix-vmult/: CMakeLists.txt  cudafullmatrix-vmult.cu  process.m
tests/dealii-vector-argmax-argmin/: CMakeLists.txt  dealii-vector-argmax-argmin.cc
tests/detect-cell-neighboring-type-for-different-triangulations/: CMakeLists.txt  detect-cell-neighboring-type-for-different-triangulations.cc
tests/detect-cell-neighboring-type-for-same-dofhandlers/: CMakeLists.txt  detect-cell-neighboring-type-for-same-dofhandlers.cc
tests/detect-cell-neighboring-type-for-same-triangulations/: CMakeLists.txt  detect-cell-neighboring-type-for-same-triangulations.cc  detect-cell-neighboring-type-for-same-triangulations.cu
tests/determinant4x4/: CMakeLists.txt  determinant4x4.cc
tests/dof-forward-and-backward-permutation/: dof-forward-and-backward-permutation.cc  dof-forward-and-backward-permutation.output
tests/dof-to-cell-topology/: CMakeLists.txt  dof-to-cell-topology.cc
tests/erichsen1996efficient-example2/: CMakeLists.txt  erichsen1996efficient-example2.cc
tests/erichsen1996efficient-example2-analytical-solution/: CMakeLists.txt  erichsen1996efficient-example2-analytical-solution.cc  erichsen1996efficient-example2-analytical-solution.output
tests/erichsen1996efficient-example2-hmat/: CMakeLists.txt  erichsen1996efficient-example2-hmat.cc
tests/erichsen1996efficient-example2-hmat-neumann-bc/: erichsen1996efficient-example2-hmat-neumann-bc.cc
tests/erichsen1996efficient-example2-neumann-bc/: CMakeLists.txt  erichsen1996efficient-example2-neumann-bc.cc  erichsen1996efficient-example2-neumann-bc.output
tests/get-vertex-dof-indices/: CMakeLists.txt  get-vertex-dof-indices.cc
tests/get_dofs_per_face_for_fe/: CMakeLists.txt  get_dofs_per_face_for_fe.cc
tests/get_support_points_in_real_cell/: CMakeLists.txt  get_support_points_in_real_cell.cc
tests/get_unit_support_points/: CMakeLists.txt  get_unit_support_points.cc  get_unit_support_points.output
tests/get_vertices_in_real_cell/: CMakeLists.txt  get_vertices_in_real_cell.cc
tests/get_vertices_in_unit_cell/: CMakeLists.txt  get_vertices_in_unit_cell.cc
tests/gmsh-and-dealii-node-ordering/: CMakeLists.txt
tests/hmatrix-add-formatted/: CMakeLists.txt  hmatrix-add-formatted.cc
tests/hmatrix-add-formatted-with-factor/: CMakeLists.txt  hmatrix-add-formatted-with-factor.output  process.m
tests/hmatrix-add-rkmatrix/: CMakeLists.txt  process.m
tests/hmatrix-add-rkmatrix-into-new-hmatrix/: CMakeLists.txt  hmatrix-add-rkmatrix-into-new-hmatrix.output
tests/hmatrix-add-rkmatrix-into-new-hmatrix-with-factor/: CMakeLists.txt  hmatrix-add-rkmatrix-into-new-hmatrix-with-factor.output  process.m
tests/hmatrix-add-rkmatrix-with-factor/: CMakeLists.txt  hmatrix-add-rkmatrix-with-factor.output
tests/hmatrix-backward-substitution/: CMakeLists.txt
tests/hmatrix-backward-substitution-coarse-ntp/: CMakeLists.txt  hmatrix-backward-substitution-coarse-ntp.output
tests/hmatrix-backward-substitution-unit-diag/: CMakeLists.txt
(+4106 files in other folders)
