CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0)
FIND_PACKAGE(deal.II 9.4.0 REQUIRED
  HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR}
  )
IF(NOT ${deal.II_FOUND})
  MESSAGE(FATAL_ERROR "\n"
    "*** Could not locate a (sufficiently recent) version of deal.II. ***\n\n"
    "You may want to either pass a flag -DDEAL_II_DIR=/path/to/deal.II to cmake\n"
    "or set an environment variable \"DEAL_II_DIR\" that contains this path."
    )
ENDIF()

DEAL_II_INITIALIZE_CACHED_VARIABLES()

# Project name
PROJECT("hierbem" LANGUAGES CUDA CXX)

# Include CMake macros provided by deal.ii
include(${DEAL_II_DIR}/cmake/macros/macro_add_flags.cmake)
include(${DEAL_II_DIR}/cmake/macros/macro_replace_flag.cmake)

message("=== Default compiler and linker flags configured by deal.ii ===")
message("DEAL_II_CXX_FLAGS: ${DEAL_II_CXX_FLAGS}")
message("DEAL_II_CXX_FLAGS_DEBUG: ${DEAL_II_CXX_FLAGS_DEBUG}")
message("DEAL_II_CXX_FLAGS_RELEASE: ${DEAL_II_CXX_FLAGS_RELEASE}")

message("DEAL_II_CUDA_FLAGS: ${DEAL_II_CUDA_FLAGS}")
message("DEAL_II_CUDA_FLAGS_DEBUG: ${DEAL_II_CUDA_FLAGS_DEBUG}")
message("DEAL_II_CUDA_FLAGS_RELEASE: ${DEAL_II_CUDA_FLAGS_RELEASE}")

message("DEAL_II_LINKER_FLAGS: ${DEAL_II_LINKER_FLAGS}")
message("DEAL_II_LINKER_FLAGS_DEBUG: ${DEAL_II_LINKER_FLAGS_DEBUG}")
message("DEAL_II_LINKER_FLAGS_RELEASE: ${DEAL_II_LINKER_FLAGS_RELEASE}")
message("====================================================")

# # Set CXX flags in debug mode oriented for performance profiling in Valgrind.
# if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
#   # Disable function inlining for performance profiling in Valgrind.
#   ADD_FLAGS(DEAL_II_CXX_FLAGS_DEBUG "-fno-inline")

#   # Replace -O0 with -O1 for performance profiling in Valgrind.
#   REPLACE_FLAG(DEAL_II_CXX_FLAGS_DEBUG "-O0" "-O1")
# endif()

# Set CUDA compiler flags for debug mode. If the program is to be profiled,
# -lineinfo should be added.
SET(DEAL_II_CUDA_FLAGS_DEBUG "-g -G --default-stream per-thread")
# Release mode without line number information.
SET(DEAL_II_CUDA_FLAGS_RELEASE "--default-stream per-thread")

# #########################################################
# Configuration for performance profiling in nsight-sys
# #########################################################
# # Add CXX compiler flag for OS runtime libraries trace in nsight-sys
# ADD_FLAGS(DEAL_II_CXX_FLAGS_RELEASE "-funwind-tables")
# # Release model With line number information for performance profiling.
# SET(DEAL_II_CUDA_FLAGS_RELEASE "-lineinfo --default-stream per-thread")

message("=== Compiler and linker flags after customization ===")
message("DEAL_II_CXX_FLAGS: ${DEAL_II_CXX_FLAGS}")
message("DEAL_II_CXX_FLAGS_DEBUG: ${DEAL_II_CXX_FLAGS_DEBUG}")
message("DEAL_II_CXX_FLAGS_RELEASE: ${DEAL_II_CXX_FLAGS_RELEASE}")

message("DEAL_II_CUDA_FLAGS: ${DEAL_II_CUDA_FLAGS}")
message("DEAL_II_CUDA_FLAGS_DEBUG: ${DEAL_II_CUDA_FLAGS_DEBUG}")
message("DEAL_II_CUDA_FLAGS_RELEASE: ${DEAL_II_CUDA_FLAGS_RELEASE}")

message("DEAL_II_LINKER_FLAGS: ${DEAL_II_LINKER_FLAGS}")
message("DEAL_II_LINKER_FLAGS_DEBUG: ${DEAL_II_LINKER_FLAGS_DEBUG}")
message("DEAL_II_LINKER_FLAGS_RELEASE: ${DEAL_II_LINKER_FLAGS_RELEASE}")
message("====================================================")

# Folder for header files
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
# Folder for source code
ADD_SUBDIRECTORY(src)

# Enable unit testing for this deal.ii user project. 
ENABLE_TESTING()

# Add unit test project folders 
# ADD_SUBDIRECTORY(tests/erichsen1996efficient-example2)
# ADD_SUBDIRECTORY(tests/erichsen1996efficient-example2-hmat)
# ADD_SUBDIRECTORY(tests/cell-neighboring-type)
# ADD_SUBDIRECTORY(tests/cell-distance)
# ADD_SUBDIRECTORY(tests/surface-jacobian-det)
# ADD_SUBDIRECTORY(tests/dof-forward-and-backward-permutation)
# ADD_SUBDIRECTORY(tests/gauss-legendre-quad-4d)
# ADD_SUBDIRECTORY(tests/point-4d)
# ADD_SUBDIRECTORY(tests/sauter-quad-same-panel)
# ADD_SUBDIRECTORY(tests/sauter-quad-common-edge)
# ADD_SUBDIRECTORY(tests/sauter-quad-common-vertex)
# ADD_SUBDIRECTORY(tests/sauter-quad-regular)
# ADD_SUBDIRECTORY(tests/normal-vector)
# ADD_SUBDIRECTORY(tests/planarity-of-gmsh-quad-cell)
# ADD_SUBDIRECTORY(tests/determinant4x4)
# ADD_SUBDIRECTORY(tests/gmsh-and-dealii-node-ordering)
# ADD_SUBDIRECTORY(tests/simple-bounding-box)
# ADD_SUBDIRECTORY(tests/binary-tree)
# ADD_SUBDIRECTORY(tests/cluster-tree)
# ADD_SUBDIRECTORY(tests/quad-tree)
# ADD_SUBDIRECTORY(tests/cluster-diameter)
# ADD_SUBDIRECTORY(tests/block-cluster-tree)
# ADD_SUBDIRECTORY(tests/lapack-matrix-delete-rows-and-columns)
# ADD_SUBDIRECTORY(tests/lapack-matrix-svd)
# ADD_SUBDIRECTORY(tests/lapack-matrix-scale-rows-and-columns)
# ADD_SUBDIRECTORY(tests/lapack-matrix-transpose)
# ADD_SUBDIRECTORY(tests/lapack-matrix-rank-k-decompose)
# ADD_SUBDIRECTORY(tests/rkmatrix)
# ADD_SUBDIRECTORY(tests/cluster-tree-hp)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-hp)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-hp-coarse-non-tensor-product)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-hp-fine-non-tensor-product)
# ADD_SUBDIRECTORY(tests/hp-matrix)
# ADD_SUBDIRECTORY(tests/hmatrix-vmult)
# ADD_SUBDIRECTORY(tests/lapack-matrix-svd-degenerate-cases)
# ADD_SUBDIRECTORY(tests/rkmatrix-truncate-to-rank)
# ADD_SUBDIRECTORY(tests/hmatrix-truncate-to-fixed-rank)
# ADD_SUBDIRECTORY(tests/lapack-matrix-hstack-vstack)
# ADD_SUBDIRECTORY(tests/lapack-matrix-fill)
# ADD_SUBDIRECTORY(tests/rkmatrix-add-formatted)
# ADD_SUBDIRECTORY(tests/lapack-matrix-qr)
# ADD_SUBDIRECTORY(tests/rkmatrix-add-formatted-using-qr)
# ADD_SUBDIRECTORY(tests/hmatrix-add-formatted)
# ADD_SUBDIRECTORY(tests/hmatrix-fullmatrix-conversion)
# ADD_SUBDIRECTORY(tests/lapack-matrix-svd-rank)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-visualize-with-rank)
# ADD_SUBDIRECTORY(tests/hmatrix-bct-struct-with-rank)
# ADD_SUBDIRECTORY(tests/lapack-matrix-reduced-svd)
# ADD_SUBDIRECTORY(tests/lapack-matrix-reduced-svd-degenerate-cases)
# ADD_SUBDIRECTORY(tests/lapack-matrix-agglomeration)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration)
# ADD_SUBDIRECTORY(tests/hmatrix-rkmatrix-conversion)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-subtree)
# ADD_SUBDIRECTORY(tests/hmatrix-coarsening)
# ADD_SUBDIRECTORY(tests/binary-tree-copy)
# ADD_SUBDIRECTORY(tests/quad-tree-copy)
# ADD_SUBDIRECTORY(tests/cluster-tree-copy-constructor)
# ADD_SUBDIRECTORY(tests/binary-tree-get-leaves)
# ADD_SUBDIRECTORY(tests/quad-tree-get-leaves)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-copy-constructor)
# ADD_SUBDIRECTORY(tests/cluster-set-inclusion)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-extend-finer-than-partition)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-extend-to-finer-partition)
# ADD_SUBDIRECTORY(tests/lapack-matrix-local-to-submatrix)
# ADD_SUBDIRECTORY(tests/lapack-matrix-global-to-rkmatrix)
# ADD_SUBDIRECTORY(tests/lapack-matrix-global-to-submatrix)
# ADD_SUBDIRECTORY(tests/lapack-matrix-local-to-rkmatrix)
# ADD_SUBDIRECTORY(tests/rkmatrix-global-to-rkmatrix)
# ADD_SUBDIRECTORY(tests/rkmatrix-local-to-rkmatrix)
# ADD_SUBDIRECTORY(tests/rkmatrix-global-to-submatrix)
# ADD_SUBDIRECTORY(tests/rkmatrix-local-to-submatrix)
# ADD_SUBDIRECTORY(tests/hmatrix-write-leaf-set-by-iteration)
# ADD_SUBDIRECTORY(tests/hmatrix-refinement)
# ADD_SUBDIRECTORY(tests/hmatrix-fine-ntp-to-tp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-agglomeration-of-two-submatrices)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-of-two-submatrices)
# ADD_SUBDIRECTORY(tests/hmatrix-rkmatrix-mmult)
# ADD_SUBDIRECTORY(tests/rkmatrix-hmatrix-mmult)
# ADD_SUBDIRECTORY(tests/hmatrix-fullmatrix-mmult)
# ADD_SUBDIRECTORY(tests/fullmatrix-hmatrix-mmult)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-all-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-all-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-fine-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-coarse-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-mmult)
# ADD_SUBDIRECTORY(tests/block-cluster-tree-overloaded-assignment)
# ADD_SUBDIRECTORY(tests/hmatrix-deep-copy-constructor)
# ADD_SUBDIRECTORY(tests/hmatrix-shallow-copy-constructor)
# ADD_SUBDIRECTORY(tests/hmatrix-overloaded-shallow-assignment)
# ADD_SUBDIRECTORY(tests/hmatrix-overloaded-deep-assignment)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-fine-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-coarse-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-inverse)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-all-fine-ntp-with-adding)
# ADD_SUBDIRECTORY(tests/hmatrix-invert-by-gauss-elim)
# ADD_SUBDIRECTORY(tests/rkmatrix-assemble-from-rkmatrix)
# ADD_SUBDIRECTORY(tests/hmatrix-add-rkmatrix)
# ADD_SUBDIRECTORY(tests/hmatrix-add-rkmatrix-into-new-hmatrix)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-all-fine-ntp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-init-with-zeros)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-all-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-coarse-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-coarse-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-fine-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-fine-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mmult-level-conserving-all-fine-ntp-member-function-call)
# ADD_SUBDIRECTORY(tests/lapack-matrix-add-with-factor)
# ADD_SUBDIRECTORY(tests/rkmatrix-add-formatted-with-factor)
# ADD_SUBDIRECTORY(tests/lapack-matrix-scale-matrix)
# ADD_SUBDIRECTORY(tests/rkmatrix-add-formatted-using-qr-with-factor)
# ADD_SUBDIRECTORY(tests/hmatrix-add-formatted-with-factor)
# ADD_SUBDIRECTORY(tests/hmatrix-add-rkmatrix-with-factor)
# ADD_SUBDIRECTORY(tests/hmatrix-add-rkmatrix-into-new-hmatrix-with-factor)
# ADD_SUBDIRECTORY(tests/rkmatrix-to-fullmatrix-rank0)
# ADD_SUBDIRECTORY(tests/rkmatrix-vmult)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-of-two-submatrices-rank0)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-rank0)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-2nd-block-rank0)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-3rd-block-rank0)
# ADD_SUBDIRECTORY(tests/rkmatrix-agglomeration-4th-block-rank0)
# ADD_SUBDIRECTORY(tests/raw-lapack-strsv)
# ADD_SUBDIRECTORY(tests/raw-lapack-dtrsv)
# ADD_SUBDIRECTORY(tests/raw-lapack-ctrsv)
# ADD_SUBDIRECTORY(tests/raw-lapack-ztrsv)
# ADD_SUBDIRECTORY(tests/lapack-matrix-forward-substitution)
# ADD_SUBDIRECTORY(tests/lapack-matrix-backward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-forward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-backward-substitution)
# ADD_SUBDIRECTORY(tests/lapack-matrix-read-from-mat)
# ADD_SUBDIRECTORY(tests/octave-read-vector)
# ADD_SUBDIRECTORY(tests/hmatrix-forward-substitution-unit-diag)
# ADD_SUBDIRECTORY(tests/hmatrix-backward-substitution-unit-diag)
# ADD_SUBDIRECTORY(tests/hmatrix-forward-substitution-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-backward-substitution-coarse-ntp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-solve-by-lu)
# ADD_SUBDIRECTORY(tests/hmatrix-block-triangular-forward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-block-triangular-forward-substitution-unit-diag)
# ADD_SUBDIRECTORY(tests/hmatrix-block-triangular-backward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-block-triangular-backward-substitution-unit-diag)
# ADD_SUBDIRECTORY(tests/lapack-matrix-solve-by-cholesky)
# ADD_SUBDIRECTORY(tests/hmatrix-cholesky-backward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-transpose-forward-substitution)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-alpha-mmult-level-conserving-all-fine-ntp-member-function-call)
# ADD_SUBDIRECTORY(tests/hmatrix-forward-substitution-matrix-valued)
# ADD_SUBDIRECTORY(tests/hmatrix-transpose-forward-substitution-matrix-valued)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-lu)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-lu-in-situ)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-all-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-all-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-coarse-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-coarse-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-fine-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-fine-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-alpha-mTmult-level-conserving-all-fine-ntp-member-function-call)
# ADD_SUBDIRECTORY(tests/hmatrix-cholesky-transpose-forward-substitution-matrix-valued)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-cholesky)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-cholesky-in-situ)
# ADD_SUBDIRECTORY(tests/rkmatrix-truncate-to-rank-with-error-matrices)
# ADD_SUBDIRECTORY(tests/hmatrix-check-parent-and-submatrix-index)
# ADD_SUBDIRECTORY(tests/hmatrix-find-diagonal-blocks)
# ADD_SUBDIRECTORY(tests/hmatrix-truncate-to-fixed-rank-preserve-spd)
ADD_SUBDIRECTORY(tests/dof-to-cell-topology)
# ADD_SUBDIRECTORY(tests/aca-random-select-ref-row)
# ADD_SUBDIRECTORY(tests/stl-gen-linear-indices)
# ADD_SUBDIRECTORY(tests/dealii-vector-argmax-argmin)
# ADD_SUBDIRECTORY(tests/rkmatrix-frobenius-norm)
# ADD_SUBDIRECTORY(tests/aca-full-matrix-approximation)
# ADD_SUBDIRECTORY(tests/regex-file-basename-and-ext)
# ADD_SUBDIRECTORY(tests/hmatrix-build-from-aca)
# ADD_SUBDIRECTORY(tests/hmatrix-build-from-aca-smp)
# ADD_SUBDIRECTORY(tests/hmatrix-build-from-aca-with-mass-matrix-smp)
# ADD_SUBDIRECTORY(tests/hmatrix-set-property)
# ADD_SUBDIRECTORY(tests/hmatrix-set-block-type)
# ADD_SUBDIRECTORY(tests/lapack-matrix-add-without-factor)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-cholesky-use-full-matrix-representation)
# ADD_SUBDIRECTORY(tests/rkmatrix-memory-consumption)
# ADD_SUBDIRECTORY(tests/lapack-matrix-memory-consumption)
# ADD_SUBDIRECTORY(tests/stl-memory-consumption-of-map)
# ADD_SUBDIRECTORY(tests/hmatrix-memory-consumption)
# ADD_SUBDIRECTORY(tests/hmatrix-solve-cholesky-in-situ-use-full-matrix-representation)
# ADD_SUBDIRECTORY(tests/lapack-matrix-vmult)
# ADD_SUBDIRECTORY(tests/hmatrix-vmult-symm)
# ADD_SUBDIRECTORY(tests/verify-jxw-on-fe_q-fe_dgq)
# ADD_SUBDIRECTORY(tests/verify-fe_q-dof-numbering)
# ADD_SUBDIRECTORY(tests/verify-dof-support-points)
# ADD_SUBDIRECTORY(tests/cell-neighboring-type-for-surface-mesh)
# ADD_SUBDIRECTORY(tests/verify-surface-mesh-refined-with-volume-mesh)
# ADD_SUBDIRECTORY(tests/verify-surface-mesh-vertex-indices)
# ADD_SUBDIRECTORY(tests/verify-two-surface-mesh-vertex-indices)
# ADD_SUBDIRECTORY(tests/verify-two-dofhandlers-on-a-same-triangulation)
# ADD_SUBDIRECTORY(tests/verify-cell-iters-in-dofhandler-and-triangulation)
# ADD_SUBDIRECTORY(tests/verify-get-vertex-indices-via-face-iter)
# ADD_SUBDIRECTORY(tests/detect-cell-neighboring-type-for-same-dofhandlers)
# ADD_SUBDIRECTORY(tests/detect-cell-neighboring-type-for-same-triangulations)
# ADD_SUBDIRECTORY(tests/verify-fe-info)
# ADD_SUBDIRECTORY(tests/get_unit_support_points)
# ADD_SUBDIRECTORY(tests/get_support_points_in_real_cell)
# ADD_SUBDIRECTORY(tests/get_vertices_in_unit_cell)
# ADD_SUBDIRECTORY(tests/get_vertices_in_real_cell)
# ADD_SUBDIRECTORY(tests/get_dofs_per_face_for_fe)
# ADD_SUBDIRECTORY(tests/get-vertex-dof-indices)
# ADD_SUBDIRECTORY(tests/detect-cell-neighboring-type-for-different-triangulations)
# ADD_SUBDIRECTORY(tests/verify-copy-dealii-function-object)
# ADD_SUBDIRECTORY(tests/laplace-bem-dirichlet-full-matrix)
# ADD_SUBDIRECTORY(tests/verify-mapping-q-generic)
# ADD_SUBDIRECTORY(tests/verify-vertex-order-in-cell-and-mapping-support-points)
# ADD_SUBDIRECTORY(tests/verify-vertex-order-in-cell-and-fe-support-points)
# ADD_SUBDIRECTORY(tests/verify-table-copy-constructor)
# ADD_SUBDIRECTORY(tests/verify-get-dpo-vector)
# ADD_SUBDIRECTORY(tests/verify-scalar-product-of-tensors)
# ADD_SUBDIRECTORY(tests/verify-cross-product-of-tensors)
# ADD_SUBDIRECTORY(tests/laplace-bem-neumann-full-matrix)
ADD_SUBDIRECTORY(tests/laplace-bem-dirichlet-hmatrix)
ADD_SUBDIRECTORY(tests/laplace-bem-neumann-hmatrix)
# ADD_SUBDIRECTORY(tests/hmatrix-symm-vmult-symm)
# ADD_SUBDIRECTORY(tests/lapack-matrix-fill-rows)
ADD_SUBDIRECTORY(tests/laplace-bem-mixed-hmatrix)
# ADD_SUBDIRECTORY(tests/verify-copy-vector)
# ADD_SUBDIRECTORY(tests/hmatrix-tvmult)
# ADD_SUBDIRECTORY(tests/hmatrix-tvmult-symm)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-mTmult-level-conserving-symm-result)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-all-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-all-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-coarse-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-coarse-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-fine-coarse-fine-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-fine-fine-coarse-ntp)
# ADD_SUBDIRECTORY(tests/hmatrix-hmatrix-Tmmult-level-conserving-symm-result-ntp)
# ADD_SUBDIRECTORY(tests/lapack-matrix-tvmult)
# ADD_SUBDIRECTORY(tests/hmatrix-vmult-tril)
# ADD_SUBDIRECTORY(tests/hmatrix-tvmult-tril)
# ADD_SUBDIRECTORY(tests/verify-dealii-vector-init-with-zeros)
# ADD_SUBDIRECTORY(tests/verify-dealii-vector-memory)
ADD_SUBDIRECTORY(tests/verify-cu-table)
# ADD_SUBDIRECTORY(tests/verify-ndarray-indices)
# ADD_SUBDIRECTORY(tests/cu-qgauss-copy-from-host)
# ADD_SUBDIRECTORY(tests/verify-fullmatrix-major)
ADD_SUBDIRECTORY(tests/cu-bem-values)
# ADD_SUBDIRECTORY(tests/verify-memory-continuity-for-tensor-table)
# ADD_SUBDIRECTORY(tests/verify-memory-continuity-for-point-table)
ADD_SUBDIRECTORY(tests/cu-scratch-data)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-mmult)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-Tmmult)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-mTmult)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-vmult)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-Tvmult)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-invert2x2)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-invert-by-gauss-elim)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-det2x2)
# ADD_SUBDIRECTORY(tests/cudafullmatrix-det3x3)
ADD_SUBDIRECTORY(tests/verify-qgauss4-data-configuration)
ADD_SUBDIRECTORY(tests/verify-sauter-quad-parametric-transform-same-panel)
ADD_SUBDIRECTORY(tests/verify-sauter-quad-parametric-transform-common-edge)
ADD_SUBDIRECTORY(tests/verify-sauter-quad-parametric-transform-common-vertex)
ADD_SUBDIRECTORY(tests/laplace-bem-mixed-spanner-model)
ADD_SUBDIRECTORY(tests/laplace-bem-dirichlet-hmatrix-two-spheres)
